--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3'
 services:
   web:
     image: nginx:alpine
-    container_name: cont-plantrat
+    container_name: cont-plantratgit 
     restart: always
     volumes:
-      - ./app/:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/
     ports:
       - "8000:80"
